// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expense summary component correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totaling 
    $23.55
  </h1>
</div>
`;

exports[`Should render expense summary component correctly with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;
